--- a/aero523_proj2/rep/q1/q1.tex
+++ b/aero523_proj2/rep/q1/q1.tex
@@ -31,7 +31,7 @@ In this expression $\left\lvert \frac{\partial {\bf F}}{\partial {\bf u}}({\bf u
     C_1 = \frac{G_1}{c^2}(s_1 - |\lambda|_3) + \frac{G_2}{c}s_2,& \qquad C_2 = \frac{G_1}{c}s_2 + (s_1 - |\lambda|_3)G_2\\ 
     G_1 = (\gamma-1)\left(\frac{q^2}{2}\Delta\rho - \vec{v}\cdot\Delta(\rho\vec{v}) +\Delta(\rho E) \right), & \qquad G_2 = -(\vec{v}\cdot \hat{n})\Delta\rho + \Delta(\rho\vec{v})\cdot\hat{n}\\ 
     s_1 = \frac{1}{2}\left(|\lambda|_1 + |\lambda|_2\right), & \qquad s_2 = \frac{1}{2}(|\lambda|_1 - |\lambda|_2)\\ 
-    \Delta {\bf u = u_R - u_L}, & q^2 = u^2 + v^2\\ 
+    \Delta {\bf u = u_R - u_L}, & \qquad q^2 = u^2 + v^2\\ 
     {\bf F_L = \vec{F}(u_L)}\cdot\hat{n}, & \qquad {\bf F_R = \vec{F}(u_R)}\cdot\hat{n}
     \shortintertext{However, to prevent expantion shocks, an entropy fix is required. The simple solution to this is to keep all eigenvalues away from zero such that,}
     \text{if}\ |\lambda|_i < \epsilon\ \text{then}\ \lambda_i = \frac{\epsilon^2 + \lambda_i^2}{2\epsilon}, & \quad \forall\ i\ \in\ [1,\ 4]\\
