dont fuk up idiot

--- a/aero523_proj2/Format.sty
+++ b/aero523_proj2/Format.sty
@@ -92,3 +92,5 @@
 \newlistof{myequations}{equ}{\listequationsname}
 \newcommand{\myequations}[1]{%
 \addcontentsline{equ}{myequations}{\hspace{0.6cm}\protect\numberline{\theequation}#1}\par}
+
+\usepackage[nottoc, notlof, notlot]{tocbibind} % Removes list of figures/tables/algorithm from ToC
