--- a/aero523_proj2/main.tex
+++ b/aero523_proj2/main.tex
@@ -1,7 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{Format}
-\usepackage[nottoc]{tocbibind}
-%\usepackage[draft]{graphicx}
+
 \usepackage{graphicx}
 
 \thispagestyle{empty}
@@ -9,7 +8,7 @@
 \fancyhf{}
 \lhead{December 4, 2020}
 \rhead{\textit{Aerospace 523, Project 2: Supersonic Engine Analysis}}
-\fancyfoot[l]{\textbf{Unviversity of Michigan - Ann Arbor}}
+\fancyfoot[l]{\textbf{University of Michigan - Ann Arbor}}
 \fancyfoot[r]{Page \thepage}
 
 
