dont fuk up idiot

--- a/aero523_proj2/rep/q4/q4.tex
+++ b/aero523_proj2/rep/q4/q4.tex
@@ -54,6 +54,7 @@ Discuss the results, including areas targeted for adaption and the convergence o
     \label{fig:adapted_mach}
 \end{figure}
 
+\paragraph{Finest Mesh Field Plot of Mach Number}
 \textcolor{red}{\large PLACE HOLDER}
 
 \pagebreak
@@ -64,6 +65,7 @@ Discuss the results, including areas targeted for adaption and the convergence o
     \label{fig:adapted_pt}
 \end{figure}
 
+\paragraph{Finest Mesh Field Plot of Total Pressure}
 \textcolor{red}{\large PLACE HOLDER}
 
 \pagebreak
