--- a/aero523_proj2/admin/coverpage.tex
+++ b/aero523_proj2/admin/coverpage.tex
@@ -5,7 +5,7 @@
 
     \vspace{0.25cm}
     Aerospace 523: Computational Fluid Dynamics I
-    \\ Undergraduate Aerospace Engineering
+    \\ Graduate Aerospace Engineering
     \\ University of Michigan, Ann Arbor
     
     \vspace{0.25cm}
